  not be invoked, since the action set was only added if the actions.xml
  file was present.

- Disabled CS+click to narrow to a bracket scope since it didn't
  actually work.

- DynamicMenuUpdate messages only worked for top-level menus.

- TAB didn't work in the action bar if there was nothing entered (it is
  supposed to list all actions.)

}}}
{{{ API Changes

- Added a new dynamic menu API, so that plugins using the 4.2 plugin API
  can provide dynamic menus. Simply write an implementation of
  org.gjt.sp.jedit.menu.DynamicMenuProvider

- EditPlugin.start() is always called from the AWT thread now.

- Added a method to bsh.NameSpace:

  addCommandPath(String path, Class clas)

  You can call this on BeanShell.getNameSpace(). BeanShell will search
  for resources named path + methodName + ".bsh" in the class loader of
  the given class when an undeclared method is invoked. Plugins can use
  this to provide additional scripting commands, the Console plugin uses
  this for example.

- Added a new method to TextAreaExtension class:

  public void paintScreenLineRange(Graphics2D gfx, int firstLine,
    int lastLine, int[] physicalLines, int[] start, int[] end,
    int y, int lineHeight)

  This method paints a whole bunch of lines at once, instead of one at a
  time, so it should be more efficient for plugins like Background and
  ErrorList.

  See javadoc for parameter documentation.

- Added long-missing DefaultInputHandler.removeKeyBinding() method.

- Added AbstractOptionPane.addComponent(Component comp, int fill)
  method.

}}}

}}}

{{{ Version 4.2pre1

Thanks to Bill McMilleon, Kasper Graversen, Kris Kopicki,
Oliver Rutherfurd, Rudi Widmann and Ryan Grove for contributing to this
release.

{{{ Editing

- Quick copy now more consistent with usual mouse behavior:

  - Control-middle-clicking on a bracket will insert the contents of the
    bracketed block at the caret position.

  - Shift-middle-clicking at a point will insert text from the caret to